# Chingedera-Obi

proyecto-iot/: .gitignore  README.md  docker-compose.yml  index.html
proyecto-iot/dashboard/: Dockerfile
proyecto-iot/dashboard/src/: api.ts
proyecto-iot/dashboard/src/app/: App.tsx
proyecto-iot/dashboard/src/app/components/: ThemeToggle.tsx
proyecto-iot/esp32/sketch_mar8a/: sketch_mar8a.ino
proyecto-iot/gateway/: README.md  app.py  config.py  main.py  pyproject.toml  subscriber.py
proyecto-iot/src/: api.ts
proyecto-iot/src/app/: routes.ts  types.ts
proyecto-iot/src/app/components/: ComparativeChart.tsx  NodeCard.tsx  NodeChart.tsx  RelayControl.tsx
proyecto-iot/src/app/pages/: Comparative.tsx  Dashboard.tsx  EventLogs.tsx
proyecto-iot/src/app/utils/: csvExport.ts  mqttSimulator.ts  notifications.ts
